# TypingTest

./: .gitignore  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  README.md  TypingTest.desktop  config.cfg  create-windows-installer.sh  windows-export.sh
res/: dictionary_old.txt  typingtest.gresource.xml
res/stickers/: stallman2
res/ui/: typingui.glade  typingui.glade~
src/: .typing_test.cpp.swp  config.cc  config.cpp  config.h  dictionary.h  files.cc  files.cpp  files.h  main.cc  main.cpp  note.cc  note.cpp  note.h  popup_menu.cc  popup_menu.cpp  popup_menu.h  sticker_buffer.cc  sticker_buffer.cpp  sticker_buffer.h  sticker_dialog.cc  sticker_dialog.cpp  sticker_dialog.h  sticker_engine.cc  sticker_engine.cpp  sticker_engine.h  test_info.cc  test_info.cpp  test_info.h  test_settings.cc  test_settings.cpp  test_settings.h  text_file.cpp  text_file.h  typing_test.cc  typing_test.cpp  typing_test.h  typing_test_application.cc  typing_test_application.cpp  typing_test_application.h  typing_test_window.cc  (+5 more)
ui/: typingui.glade  typingui.glade~
windows/: installer.wxs
